--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+eframe = { version = "0.31.1" }
+env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
